# webc

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: main.yml
common/: Cargo.toml
lexer/: Cargo.toml
lexer/src/: lib.rs  main.rs  result.rs
lexer/src/config/: mod.rs
lexer/src/tokens/: assign.rs  binary_operator.rs  comment.rs  compare_operator.rs  keyword.rs  literal.rs  mod.rs  punctuator.rs  type_keyword.rs  unary_operator.rs  utils.rs
tests/: Cargo.toml
tests/tests/: test_something.rs
webc/: Cargo.toml
webc-examples/: source.wc
webc/src/: config.rs  lib.rs  main.rs
webc/src/ast/: assignment.rs  binary_operation.rs  function_call.rs  function_declaration.rs  identifier.rs  if_statement.rs  left_expression.rs  literal.rs  loop_interrupt.rs  loop_statement.rs  mod.rs  node.rs  return_statement.rs  right_expression.rs  scope.rs  type_declaration.rs  type_definition.rs  variable_declaration.rs
webc/src/config/: mod.rs
webc/src/lexer/: mod.rs
webc/src/lexer/source/: mod.rs  position.rs
webc/src/lexer/tokens/: assign.rs  assign_operators.rs  binary_operator.rs  comment.rs  compare_operator.rs  keyword.rs  literal.rs  mod.rs  punctuator.rs  type_keyword.rs  unary_operator.rs  utils.rs
webc/src/result/: ast.rs  compiler.rs  expressions_parser.rs  lexer.rs  mod.rs
