[package]
name = "webc-lexer"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
envconfig = { workspace = true }
dotenvy = { workspace = true }
logos = { workspace = true }
serde = { workspace = true }
