[package]
name = "webc"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
envconfig = { workspace = true }
dotenvy = { workspace = true }
